@@ -2136,5 +2136,11 @@ Su 3. Sep 14:21:29 CEST 2006
 
 	- Synced parser.
 	- Added another regression test and fixed tcp test.
+
+Tu 5. Sep 11:49:08 CEST 2006
+
+	- Synced parser.
+	- Fixed ecpglib trying to read one character after end-of-string.
+	- Fixed port number setting in regression suite.
 	- Set ecpg library version to 5.2.
 	- Set ecpg version to 4.2.1.
